post review copy-text changes

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -10,8 +10,7 @@ en:
           advice: "Check out <a href=\"http://support.sharetribe.com/knowledgebase/articles/744438\" target=\"_blank\" alt=\"How to get good-looking cover photos, logos, favicon, profiles and listing pictures?\">our guide</a> on where to find good-looking images that are free to use. <br/>Note: the photo will be resized to 1920x450 pixels. The top and bottom sections of images that are taller will be cropped."
         filter:
           title: "Step 4: Add listing fields & filters"
-          description_p1: "Filters help your visitors find what they are looking for. For example, if clothes are sold on your marketplace, you probably want to create a filter for sizes."
-          description_p2: "You can create your own filters by adding listing fields."
+          description: "Listing fields determine the structure of your marketplace. For example, if you are building a marketplace for selling used shoes, you probably want to add a field for shoe size. The seller will then need to add the size of their shoes when creating a new shoe listing. If you wish to allow your customers to filter listings based on shoe size, you can check the box <i>Display a filter based on this field on the homepage</i> when creating the field."
           info_image_alt: "A screenshot from fields and filters page"
           add_fields_and_filters: "Add fields & filters"
           advice: "Filters are very handy, but <a target=\"_blank\" href=\"https://www.sharetribe.com/academy/how-to-help-your-customers-find-the-right-product-or-service/\">you shouldn't add too many</a>. Customers will be overwhelmed by having too many filters, and each filter is an additional field for your suppliers to fill in."
@@ -23,7 +22,7 @@ en:
           advice: "Invite your friends first and gather feedback from them."
         listing:
           title: "Step 6: Add your first listing"
-          description: "Listings are what marketplaces are all about, but your marketplace is currently looking very empty. To get an idea of what a listing looks like and what it takes to post one, create one for yourself."
+          description: "Listings are the content of your marketplace: the products or services your providers are offering. To make your marketplace look less empty and test how the process of creating a new listing works, add one yourself!"
           info_image_alt: "A screenshot from Post a new listing page"
           post_your_first_listing: "Post your first listing"
           advice: "Removing a listing is easy: simply click on the listing and choose <i>Close listing</i>."
@@ -35,9 +34,9 @@ en:
           listing: "Post your first listing"
           invitation: "Invite users"
         paypal:
-          title: "Step 5: Start accepting payments"
-          description_p1: "In order to let your users receive payments and you to receive transaction fees, you need to enable payments by connecting your PayPal account. Once connected, you need to choose a minimum transaction size and commission fee."
-          description_p2: ""
+          title: "Step 5: Set up online payments"
+          description_p1: "If you want to allow your providers to accept online payments, you need to connect your PayPal account (you will receive a fee from each transaction). Once connected, you need to choose a minimum transaction size and your transaction fee."
+          description_p2: "Alternatively, you can disable online payments for now."
           info_image_alt: "A screenshot from payments page"
           setup_payments: "Set up payments"
           advice: "To disable payments, read <a href=\"http://support.sharetribe.com/knowledgebase/articles/470085\" target=\"_blank\" alt=\"How to disable payments or add free listings to your marketplace\">this article</<a>."
@@ -46,18 +45,20 @@ en:
           description: "The slogan & description help new visitors understand what your marketplace is about. It's the first thing they notice when they enter your site, so try to make it descriptive but succinct."
           info_image_alt: "A screenshot of homepage showing slogan and description."
           add_your_own: "Add slogan & description"
-          advice: "Use the description to clearly describe what your visitors can find on your marketplace. As an example, the following format should work well: \"The best place to [rent/sell/swap/share] [products/services/goods]\"."
+          advice: "Use the slogan to tell quickly what your marketplace is about. <i>\"Buy food from locals\"</i> or <i>\"Get guitar lessons from a pro\"</i> are good examples. In the description text you can then expand on your main value proposition. <i>\"FoodMarket is the easiest way to order produce directly from local providers\"</i> or <i>\"GuitarPro is the best place to compare music teachers\"</i> are good examples."
         status_page:
           title: "Welcome to your marketplace, %{name}"
           title_done: "All done!"
           description_p1: "To get your marketplace up and running, there are a few essential steps you need to take, as listed below."
           description_p2: "Once finished, your marketplace will be ready to receive its first visitors!"
-          congratulation: "Fantastic! You did it! Your marketplace is now up and running. However, this is just the start. You should continously update, improve and promote your marketplace. For some ideas on what to do next, check out the <a href=\"https://www.sharetribe.com/academy/\" target=\"_blank\">Marketplace academy</a>."
+          congratulation_p1: "You did it! Your marketplace is now up and running. However, this is just the beginning. You've only seen a fraction of the customization options that Sharetribe offers. To read more about how to customize your marketplace further, check out <a href='http://support.sharetribe.com/knowledgebase' alt='knowledge base' target='_blank'>our knowledge base</a>."
+          congratulation_p2: "If you wish to learn more about how to build your marketplace business, we recommend our <a href='https://www.sharetribe.com/academy/guide/' alt='link to marketplace academy' target='_blank'>practical guide for building an online marketplace business</a>."
+          congratulation_p3: "If you have any questions, don't hesitate to <a data-uv-trigger='contact' href='mailto:support@sharetribe.com' title='Support'>contact our support</a>, we're always happy to help!"
           create_your_marketplace: "Create your marketplace"
           slogan_and_description: "Add a slogan & description"
           cover_photo: "Upload a cover photo"
           filter: "Add fields & filters"
-          paypal: "Connect PayPal"
+          paypal: "Set up online payments"
           listing: "Post a listing"
           invitation: "Invite users"
         back_to_todo: "Back to to-do list"
@@ -72,15 +73,15 @@ en:
           button: "Upload a cover photo"
         filter:
           title: "Looking good!"
-          body: "Now let's focus on some functionality. Filters help your users find what they are looking for. Add a custom filter that's specific to your marketplace."
+          body: "Now let's focus on some functionality. Listing fields and filters give structure to your marketplace and help your customers find what they are looking for."
           button: "Add fields & filters"
         paypal:
           title: "Well done! "
-          body: "Next up: accepting payments. To enable payments, your PayPal account needs to be connected to your marketplace. Once connected, you need to choose a minimum transaction size and a commission fee."
+          body: "Next, set up your marketplace for online payments! To allow your providers to accept payments, you need to connect your Paypal account. Alternative, you can disable online payments for now."
           button: "Set up payments"
         listing:
           title: "Good job!"
-          body: "Now, let's post a listing! Listings are what marketplaces are all about, but your marketplace is looking very empty without any."
+          body: "The basics of your marketplace have now been set up, but the site is quite empty. It's time to add the first product or service by posting a new listing."
           button: "Post your first listing"
         invitation:
           title: "...and now the final step - share your marketplace!"
