paypal step needs alternative cta button for disabling payments

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -38,6 +38,7 @@ en:
           description_p1: "If you want to allow your providers to accept online payments, you need to connect your PayPal account (you will receive a fee from each transaction). Once connected, you need to choose a minimum transaction size and your transaction fee."
           description_p2: "Alternatively, you can disable online payments for now."
           info_image_alt: "A screenshot from payments page"
+          disable_payments: "Disable payments"
           setup_payments: "Set up payments"
           advice: "To disable payments, read <a href=\"http://support.sharetribe.com/knowledgebase/articles/470085\" target=\"_blank\" alt=\"How to disable payments or add free listings to your marketplace\">this article</<a>."
         slogan_and_description:
