Add 'or' between buttons

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -40,6 +40,7 @@ en:
           info_image_alt: "A screenshot from payments page"
           disable_payments: "Disable payments"
           setup_payments: "Set up payments"
+          cta_separator: "or"
           advice: "To disable payments, read <a href=\"http://support.sharetribe.com/knowledgebase/articles/470085\" target=\"_blank\" alt=\"How to disable payments or add free listings to your marketplace\">this article</<a>."
         slogan_and_description:
           title: "Step 2: Slogan & Description"
