add link to invitation page (one last preview)

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -16,7 +16,7 @@ en:
           advice: "Filters are very handy, but <a target=\"_blank\" href=\"https://www.sharetribe.com/academy/how-to-help-your-customers-find-the-right-product-or-service/\">you shouldn't add too many</a>. Customers will be overwhelmed by having too many filters, and each filter is an additional field for your suppliers to fill in."
         invitation:
           title: "Step 7: Inviting users"
-          description: "Happy with what marketplace looks like and how it works? Maybe one last preview? If you're ready, let's start inviting users!"
+          description: "Happy with what marketplace looks like and how it works? Maybe <a href='/?big_cover_photo=true' alt='Check preview' target='_blank'>one last preview</a>? If you're ready, let's start inviting users!"
           info_image_alt: "Users illustration"
           invite_users: "Invite users"
           advice: "Invite your friends first and gather feedback from them."
