WTI pull [skip ci]

--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -777,7 +777,7 @@ es-ES:
       payment_receiver: "Receptor del pago"
       cardholder_name: "Nombre del titular de la tarjeta"
       credit_card_number: "Número de tarjeta de crédito"
-      cvv: "Código de seguridad (CVV)"
+      cvv: "Código de seguridad"
       credit_card_expiration_date: "Fecha de caducidad de la tarjeta"
       confirm_payment: "Confirmar pago"
       exp: "Exp:"
